tests/ui/error-codes/E0512.rs
fn takes_u8(_: u8) {}

fn main() {
    unsafe { takes_u8(::std::mem::transmute(0u16)); } //~ ERROR E0512
}
